# staticstruct

./: CMakeLists.txt  Makefile  README.md  example.cc  staticstruct.cc  staticstruct.hh
sandbox/: Makefile  README.md  main.cc
